impls/monero.dart/lib/src/generated_bindings_beldex.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// monero_c beldex bindings
class FfiBeldexC {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FfiBeldexC(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FfiBeldexC.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int BELDEX_PendingTransaction_status(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
  ) {
    return _BELDEX_PendingTransaction_status(
      pendingTx_ptr,
    );
  }

  late final _BELDEX_PendingTransaction_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_PendingTransaction_status');
  late final _BELDEX_PendingTransaction_status =
      _BELDEX_PendingTransaction_statusPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_PendingTransaction_errorString(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
  ) {
    return _BELDEX_PendingTransaction_errorString(
      pendingTx_ptr,
    );
  }

  late final _BELDEX_PendingTransaction_errorStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_PendingTransaction_errorString');
  late final _BELDEX_PendingTransaction_errorString =
      _BELDEX_PendingTransaction_errorStringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  bool BELDEX_PendingTransaction_commit(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
    ffi.Pointer<ffi.Char> filename,
    bool overwrite,
  ) {
    return _BELDEX_PendingTransaction_commit(
      pendingTx_ptr,
      filename,
      overwrite,
    );
  }

  late final _BELDEX_PendingTransaction_commitPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('BELDEX_PendingTransaction_commit');
  late final _BELDEX_PendingTransaction_commit =
      _BELDEX_PendingTransaction_commitPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>, bool)>();

  ffi.Pointer<ffi.Char> BELDEX_PendingTransaction_commitUR(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
    int max_fragment_length,
  ) {
    return _BELDEX_PendingTransaction_commitUR(
      pendingTx_ptr,
      max_fragment_length,
    );
  }

  late final _BELDEX_PendingTransaction_commitURPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('BELDEX_PendingTransaction_commitUR');
  late final _BELDEX_PendingTransaction_commitUR =
      _BELDEX_PendingTransaction_commitURPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int)>();

  int BELDEX_PendingTransaction_amount(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
  ) {
    return _BELDEX_PendingTransaction_amount(
      pendingTx_ptr,
    );
  }

  late final _BELDEX_PendingTransaction_amountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_PendingTransaction_amount');
  late final _BELDEX_PendingTransaction_amount =
      _BELDEX_PendingTransaction_amountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_PendingTransaction_dust(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
  ) {
    return _BELDEX_PendingTransaction_dust(
      pendingTx_ptr,
    );
  }

  late final _BELDEX_PendingTransaction_dustPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_PendingTransaction_dust');
  late final _BELDEX_PendingTransaction_dust =
      _BELDEX_PendingTransaction_dustPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_PendingTransaction_fee(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
  ) {
    return _BELDEX_PendingTransaction_fee(
      pendingTx_ptr,
    );
  }

  late final _BELDEX_PendingTransaction_feePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_PendingTransaction_fee');
  late final _BELDEX_PendingTransaction_fee = _BELDEX_PendingTransaction_feePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_PendingTransaction_txid(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_PendingTransaction_txid(
      pendingTx_ptr,
      separator,
    );
  }

  late final _BELDEX_PendingTransaction_txidPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_PendingTransaction_txid');
  late final _BELDEX_PendingTransaction_txid =
      _BELDEX_PendingTransaction_txidPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int BELDEX_PendingTransaction_txCount(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
  ) {
    return _BELDEX_PendingTransaction_txCount(
      pendingTx_ptr,
    );
  }

  late final _BELDEX_PendingTransaction_txCountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_PendingTransaction_txCount');
  late final _BELDEX_PendingTransaction_txCount =
      _BELDEX_PendingTransaction_txCountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_PendingTransaction_subaddrAccount(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_PendingTransaction_subaddrAccount(
      pendingTx_ptr,
      separator,
    );
  }

  late final _BELDEX_PendingTransaction_subaddrAccountPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>(
      'BELDEX_PendingTransaction_subaddrAccount');
  late final _BELDEX_PendingTransaction_subaddrAccount =
      _BELDEX_PendingTransaction_subaddrAccountPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_PendingTransaction_subaddrIndices(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_PendingTransaction_subaddrIndices(
      pendingTx_ptr,
      separator,
    );
  }

  late final _BELDEX_PendingTransaction_subaddrIndicesPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>(
      'BELDEX_PendingTransaction_subaddrIndices');
  late final _BELDEX_PendingTransaction_subaddrIndices =
      _BELDEX_PendingTransaction_subaddrIndicesPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_PendingTransaction_multisigSignData(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
  ) {
    return _BELDEX_PendingTransaction_multisigSignData(
      pendingTx_ptr,
    );
  }

  late final _BELDEX_PendingTransaction_multisigSignDataPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>>(
      'BELDEX_PendingTransaction_multisigSignData');
  late final _BELDEX_PendingTransaction_multisigSignData =
      _BELDEX_PendingTransaction_multisigSignDataPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  void BELDEX_PendingTransaction_signMultisigTx(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
  ) {
    return _BELDEX_PendingTransaction_signMultisigTx(
      pendingTx_ptr,
    );
  }

  late final _BELDEX_PendingTransaction_signMultisigTxPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_PendingTransaction_signMultisigTx');
  late final _BELDEX_PendingTransaction_signMultisigTx =
      _BELDEX_PendingTransaction_signMultisigTxPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_PendingTransaction_signersKeys(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_PendingTransaction_signersKeys(
      pendingTx_ptr,
      separator,
    );
  }

  late final _BELDEX_PendingTransaction_signersKeysPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_PendingTransaction_signersKeys');
  late final _BELDEX_PendingTransaction_signersKeys =
      _BELDEX_PendingTransaction_signersKeysPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_PendingTransaction_hex(
    ffi.Pointer<ffi.Void> pendingTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_PendingTransaction_hex(
      pendingTx_ptr,
      separator,
    );
  }

  late final _BELDEX_PendingTransaction_hexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_PendingTransaction_hex');
  late final _BELDEX_PendingTransaction_hex =
      _BELDEX_PendingTransaction_hexPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int BELDEX_UnsignedTransaction_status(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
  ) {
    return _BELDEX_UnsignedTransaction_status(
      unsignedTx_ptr,
    );
  }

  late final _BELDEX_UnsignedTransaction_statusPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_UnsignedTransaction_status');
  late final _BELDEX_UnsignedTransaction_status =
      _BELDEX_UnsignedTransaction_statusPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_UnsignedTransaction_errorString(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
  ) {
    return _BELDEX_UnsignedTransaction_errorString(
      unsignedTx_ptr,
    );
  }

  late final _BELDEX_UnsignedTransaction_errorStringPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>>(
      'BELDEX_UnsignedTransaction_errorString');
  late final _BELDEX_UnsignedTransaction_errorString =
      _BELDEX_UnsignedTransaction_errorStringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_UnsignedTransaction_amount(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_UnsignedTransaction_amount(
      unsignedTx_ptr,
      separator,
    );
  }

  late final _BELDEX_UnsignedTransaction_amountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_UnsignedTransaction_amount');
  late final _BELDEX_UnsignedTransaction_amount =
      _BELDEX_UnsignedTransaction_amountPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_UnsignedTransaction_fee(
    ffi.Pointer<ffi.Void> unsignedTx_ptr,
    ffi.Pointer<ffi.Char> separator,
  ) {
    return _BELDEX_UnsignedTransaction_fee(
      unsignedTx_ptr,
      separator,
    );
  }
